--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,22 @@
 
 body {
   font-family: "SN Pro", sans-serif;
-  background-color: #F4F2EE;
+  background-color: #f4f2ee;
 }
 
 .topbar-element {
-    color: #666666;
+  color: #666666;
 }
 
 .topbar-element.selected {
-    color: #000000;
+  color: #000000;
 }
 
 .topbar-element:hover {
-    color: #000000;
+  color: #000000;
 }
 
 .bold-placeholder::placeholder {
-    color: black;
-    font-weight: bold;
-}
+  color: black;
+  font-weight: bold;
+}  
